--- a/analyses/introgression_analyses.qmd
+++ b/analyses/introgression_analyses.qmd
@@ -23,7 +23,7 @@ nsim <- 5
 for (i in c(1, 3, 5)) {
   for (j in 1:nsim) {
     totab <- read_csv(
-      glue('../results/old/sim_1_{i}_{j}_introgression_error_model.csv'),
+      glue('../results/sim_1_{i}_{j}_nelder_mead_100Mb.csv'),
       show_col_types = FALSE, col_names = FALSE
       ) |> 
       mutate(
@@ -36,10 +36,12 @@ for (i in c(1, 3, 5)) {
 }
 
 colnames(totab) <- c("idx", "t_A", "t_B", "t_C", "t_2", "t_upper", "t_m", 
-                    "N_AB", "N_ABC", "r", "m", 
+                    "N_AB", "N_BC", "N_ABC", "r", "m", 
                     "loglik", "time", "n_AB", "n_ABC", "sim")
 
 ```
+
+
 
 ```{r}
 
@@ -81,17 +83,50 @@ totab |>
 
 ```{r fig.height=10, fig.width=10}
 
+vari = "loglik"
 totab |> 
   ggplot() +
-  geom_hline(aes(yintercept = t_A), data = filter(totab, idx == 0)) +
-  geom_hline(aes(yintercept = t_A/2), data = filter(totab, idx == 0)) +
-  geom_line(aes(idx, t_A, color = as.character(n_ABC))) +
+  geom_hline(aes(yintercept = !!sym(vari), color = as.character(n_ABC)), 
+             data = filter(totab, idx == -1),
+             linetype = 2) +
+  geom_line(aes(idx, !!sym(vari), color = as.character(n_ABC))) +
   facet_wrap(~sim, scales = "free", ncol = 1) 
-  
 
 ```
 
 
+```{r fig.height=10, fig.width=10}
+
+vari = "N_BC"
+fct = 2
+
+totab |> 
+  ggplot() +
+  # geom_hline(aes(yintercept = !!sym(vari)), data = filter(totab, idx == 0),
+  #            linetype = 3) +
+  geom_hline(aes(
+    yintercept =
+      case_when(
+        vari == "t_m" ~ 0,
+        vari %in% c("t_C", "t_2") ~ !!sym(vari)-!!sym(vari)/25,
+        .default = !!sym(vari)-!!sym(vari)/fct)
+      ),
+    data = filter(totab, idx == -1)) +
+  geom_hline(aes(
+    yintercept =
+      case_when(
+        vari == "t_m" ~ min(c(t_B-t_B/25, (t_C-t_C/25)-(t_2+t_2/25))),
+        vari %in% c("t_C", "t_2") ~ !!sym(vari)+!!sym(vari)/25,
+        .default = !!sym(vari)+!!sym(vari)/fct)
+      ),
+    data = filter(totab, idx == -1)) +
+  geom_hline(aes(yintercept = !!sym(vari)), data = filter(totab, idx == -1),
+             linetype = 2) +
+  geom_line(aes(idx, !!sym(vari), color = as.character(n_ABC))) +
+  facet_wrap(~sim, scales = "free", ncol = 1) 
+  
+
+```
 
 ```{r}
 
@@ -133,6 +168,13 @@ tab_plt_2 <- totab %>%
     name_2 = factor(name_2, rev(c('AB', 'ABC', 'A', 'B', 'C', '2', 'upper', 'm', '')))
     ) 
 
+
+
+totab %>% 
+  filter(idx != -1) %>% 
+  # filter(idx < 300) %>% 
+  group_by(n_AB, n_ABC, sim) %>% 
+  filter(is.na(loglik))
 
 ```
 
@@ -213,7 +255,8 @@ meanvals <- tab_plt_2 |>
   mutate(nam = as.numeric(as.factor(name))) |> 
   full_join(true3, by = c('n_AB', 'n_ABC', 'name', 'name_1', 'name_2', 'nam')) |> 
   mutate(
-    value = (value.x-value.y)/value.y
+    value = (value.x-value.y)/value.y,
+    # value = value.x/value.y
     ) |> 
   group_by(n_AB, n_ABC, name, name_1, name_2, nam) |> 
   summarise(
@@ -232,7 +275,10 @@ tab_plt_2 |>
   # filter(name != 'rho') |> 
   mutate(nam = as.numeric(as.factor(name))) |> 
   full_join(true3, by = c('n_AB', 'n_ABC', 'name', 'name_1', 'name_2', 'nam')) |> 
-  mutate(value = (value.x-value.y)/value.y) |>
+  mutate(
+    value = (value.x-value.y)/value.y,
+    # value = value.x/value.y
+    ) |>
   ggplot() +
   geom_rect(aes(xmin = xmin, xmax = xmax, ymin = ymin-.5, ymax = ymax+.5), 
             fill = 'grey93',
@@ -254,7 +300,8 @@ tab_plt_2 |>
     labels = fornames$name,
     expand = c(0, 0)) +
   scale_color_manual(values = c('#FFC107', '#1E88E5', '#D81B60')) +
-  xlab('(estimated - true) / estimated') +
+  xlab('(estimated - true) / true') +
+  # xlab('estimated / true') +
   ylab('Parameter') +
   labs(color = TeX('Number of intervals ($n_{ABC}$)')) +
   theme(legend.position = 'top')
@@ -269,6 +316,3 @@ mult <- 1.2
 # ggsave('../plots/new_figure_2.pdf', height = 5/mult, width = 7/mult)
 
 ```
-
-
-
